# kittyscope

./: README.md  pyproject.toml
src/kittyscope/: main.py
src/kittyscope/app/: __init__.py  app.py
src/kittyscope/assets/styles/: styles.qss
src/kittyscope/models/: analyzer.py  finder.py  research_router.py  researchers.py
src/kittyscope/utils/: __init__.py  file_types.py
src/kittyscope/widgets/: chart_builder.py  main_dialog.py  q_lines.py  table.py
